2022-12-20  Mark Wielaard  <mark@klomp.org>

	* disasm_begin.c: Include libeblP.h.
	* disasm_cb.c: Likewise.
	* bpf_disasm.c: Likewise and include common.h.

2022-10-21  Yonggang Luo  <luoyonggang@gmail.com>

	* asm_abort.c: Don't include unistd.h.
	* asm_addint8.c: Don't include byteswap.h and endian.h.
	* asm_begin.c: Don't include unistd.h and system.h.
	* asm_end.c: Likewise.
	* libasmP.h: Include system.h.

2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* asm_align.c (__libasm_ensure_section_space): Remove casts of calloc
	return values.
	* asm_begin.c (asm_begin): Remove cast of malloc return value.
	* asm_fill.c (asm_fill): Likewise.
	* asm_newabssym.c (asm_newabssym): Likewise.
	* asm_newcomsym.c (asm_newcomsym): Likewise.
	* asm_newscn.c (asm_newscn): Likewise.
	* asm_newscngrp.c (asm_newscngrp): Likewise.
	* asm_newsubscn.c (asm_newsubscn): Likewise.
	* asm_newsym.c (asm_newsym): Likewise.
	* disasm_begin.c (disasm_begin): Likewise.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* libasmP.h (asm_emit_symbol_p): Use startswith.

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* libasmP.h (_): Remove.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* asm_begin.c (prepare_binary_output): Fix spelling typo in comment.
	* asm_end.c (binary_end): Likewise.

2020-12-11  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (GCC_INCLUDE): Remove.

2020-12-09  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (noinst_PROGRAMS): Rename to noinst_DATA.
	(libasm_so_SOURCES): Remove.
	(CLEANFILES): Add libasm.so.

2020-11-30  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (libasm.so$(EXEEXT)): Drop $(EXEEXT) suffix.

2020-10-29  Mark Wielaard  <mark@klomp.org>

	* asm_align.c (__libasm_ensure_section_space): Use calloc, not
	malloc to allocate extra space.

2020-07-19  Mark Wielaard  <mark@klomp.org>

	* libasmP.h: Include libebl.h after libasm.h.

2020-07-05  Mark Wielaard  <mark@klomp.org>

	* libasm.h: Include gelf.h.
